# audio_snippet_automation

./: .bandit  .gitignore  .pre-commit-config.yaml  LICENSE  README.MD  README_old.md  batch_audio_snippets.py  pyproject.toml  requirements-dev.txt  snippets.csv  test-act.ps1  test-workflows.ps1
.github/: CODEOWNERS  TESTING_WORKFLOWS.md  YTDLP_AUTOMATION.md  ytdlp-update-config.yml
.github/workflows/: ci.yml  integration-test-ytdlp.yml  release.yml  test-setup.yml  test-ytdlp-logic.yml  update-ytdlp-health.yml  update-ytdlp.yml
docs/: git-branch-cleanup-lecture.md  self-hosted-runner-cleanup.md
examples/: snippets.csv  soundboard.json
src/audio_snippet_automation/: __init__.py  cli.py  core.py  generate_soundboard.py  snippet_cli.py  soundboard.py  soundboard_cli.py
src/audio_snippet_automation/static/js/: soundboard.js
src/audio_snippet_automation/templates/: soundboard.html
tests/: test_core.py  test_generate_soundboard.py  test_snippet_cli.py  test_soundboard_cli.py  test_utils.py
tests/workflows/: test_ytdlp_logic.py
